@@ -1,23 +1,25 @@
 % File src/library/utils/man/getS3method.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2012 R Core Team
+% Copyright 1995-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{getS3method}
 \alias{getS3method}
-\title{Get An S3 Method}
+\title{Get an S3 Method}
 \description{
   Get a method for an S3 generic, possibly from a namespace or the
   generic's registry.
 }
 \usage{
-getS3method(f, class, optional = FALSE)
+getS3method(f, class, optional = FALSE, envir = parent.frame())
 }
 \arguments{
   \item{f}{character: name of the generic.}
   \item{class}{character: name of the class.}
   \item{optional}{logical: should failure to find the generic or a
     method be allowed?}
+  \item{envir}{the \code{\link{environment}} in which the method and its
+    generic are searched first.}
 }
 \details{
   S3 methods may be hidden in namespaces, and will not
@@ -45,4 +47,4 @@ exists("predict.ppr") # false
 getS3method("predict", "ppr")
 }
 \keyword{data}
-
+\keyword{methods}
